--- a/res/res_bueno/styleSignIn.css
+++ b/res/res_bueno/styleSignIn.css
@@ -2,6 +2,8 @@
     --blue-btn: rgb(82, 82, 255);
     --btn-hover: rgb(220, 220, 220);
     --btn-borde: #aeaeae76;
+    margin: 0;
+    padding: 0;
 }
 
 * {
@@ -15,39 +17,76 @@ html {
 }
 
 body {
-    background-color: rgb(57, 57, 57);
+    background-color: white;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+
 }
 
 h1 {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: rgb(134, 192, 47);
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    font-size: 4rem;
+    font-size: 6rem;
     font-weight: bold;
+
+    animation: shrink 1s forwards;
+
+    /* display: none; */
 }
 
+
+
 #login_container {
-    width: 90%;
-    max-width: 300px;
-    margin: 0 auto;
+    width: 40%;
+
+    height: 100%;
 
     display: flex;
     flex-direction: column;
+
     align-items: center;
+    justify-content: center;
+
     gap: 10px;
-    /* padding: 5px; */
-    border-radius: 10px;
-    padding-top: 10px;
+
     overflow: hidden;
-    background-color: rgb(205, 205, 205);
-    border: 3px solid var(--btn-borde);
 
 }
 
-#login_container>input {
+#login_form {
+    /* background-color: red; */
+
+
+}
+
+#login_form>input {
     padding: 10px;
+
+    width: 400px;
+    font-size: 1.3rem;
+
+
     border-radius: 5px;
 }
 
-#login_container>label {
+#login_form>label {
     padding: 10px;
     border-radius: 5px;
     letter-spacing: 1px;
@@ -57,30 +96,84 @@ h1 {
 #btn_container {
     width: 100%;
     display: flex;
+
     flex-direction: row;
     justify-content: center;
-    background-color: red;
-    margin-top: 10px;
 }
 
 #btn_container input {
     width: 100%;
-    padding: 5px;
+    padding: 15px;
     border: none;
-    font-size: 1rem;
-    font-weight: bold;
-    color: var(--blue-btn);
+    font-size: 1.3rem;
+    font-weight: 800;
+    background-color: white;
+    border: none;
+
+}
+
+#btn_container input:hover {
+    background-color: rgb(220, 220, 220);
 }
 
 .login_margin {
-    width: 90%;
+    display: block;
+    font-size: 1.3rem;
+}
+
+.login_spacer {
+    margin-top: 40px;
 }
 
 #warning-text {
     width: 90%;
-    background-color: gray;
+
     border-radius: 5px;
     padding: 10px 5px;
     margin: 0;
     font-weight: bold;
+}
+
+
+@media (max-width: 1500px) {
+    h1 {
+        animation-name: shrink2;
+    }
+
+    #login_container {
+        width: 60%;
+    }
+}
+
+@media (max-width: 800px) {
+    h1 {
+        animation-name: shrink3;
+        background-color: red;
+    }
+
+    #login_container {
+        position: absolute;
+        width: 100%;
+        height: 70%;
+        bottom: 0;
+
+    }
+}
+
+@keyframes shrink {
+    to {
+        width: 60%;
+    }
+}
+
+@keyframes shrink2 {
+    to {
+        width: 40%;
+    }
+}
+
+@keyframes shrink3 {
+    to {
+        height: 30%;
+    }
 }
